--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           echo "$SECRET_CONTENT" > secret_data.txt
           chmod 600 secret_data.txt
-          cat secret_data.txt
+          cat secret_data.txt >> "$GITHUB_OUTPUT"
