--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,23 +10,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Read secret (content won't be shown in logs)
-        env:
-          SECRET_CONTENT: ${{ secrets.TEST_SECRET }}
-        run: echo "Secret content has been read."
-
-      - name: Create file from secret
+      - name: Get Pull Request Title
+        id: get_title
         run: |
-          echo "$SECRET_CONTENT" > secret_data.txt
-          chmod 777 secret_data.txt
-          cat secret_data.txt
-
-      - name: Verify file creation (without revealing content)
+          echo "PR_TITLE=$(github.event.pull_request.title)" >> $GITHUB_OUTPUT
+     
+      - name: Save Title to File (optional)
         run: |
-          # Check if the file exists and has expected size
-          if [[ -f secret_data.txt && $(wc -c < secret_data.txt) -gt 0 ]]; then
-            echo "File 'secret_data.txt' created successfully."
-          else
-            echo "Error: File creation failed or empty."
-            exit 1  # Fail the workflow if file creation has issues
-          fi
+          mkdir -p output  # Create output directory if needed
+          echo "${{ steps.get_title.outputs.PR_TITLE }}" > output/pr_title.txt
+
+      - name: Read non-secret file content
+        run: |
+          cat output/pr_title.txt  
