--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,8 @@ on:
   push:
 
 env:
-  PR_TITLE: ${{ github.event.pull_request.title }} # this is returning empty
+  PR_NUMBER: ${{ github.event.number }}
+  PR_TITLE: ${{ github.event.pull_request.title }} 
   PR_DESCRIPTION: ${{ github.event.head_commit.message }}
 
 jobs:
@@ -15,8 +16,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Get Pull Request Number
-        run: echo "PULL_NUMBER=$(echo "$GITHUB_REF" | awk -F / '{print $3}')" >> $GITHUB_ENV
-        shell: bash
+        run: |
+          echo "PR title is: $PR_NUMBER"
 
       - name: Verify file creation (without revealing content)
         run: |
