--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 env:
-  PR_NUMBER: ${{ github.event.number }}
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
   PR_TITLE: ${{ github.event.pull_request.title }}
   PR_DESCRIPTION: ${{ github.event.head_commit.message }}
 
@@ -17,7 +17,8 @@ jobs:
 
       - name: Get Pull Request Number
         run: |
-          echo "PR title is: $PR_NUMBER"
+          echo "PR branch is: ${GITHUB_REF##*/}"
+          echo "Another option: $BRANCH_NAME"
 
       - name: Verify file creation (without revealing content)
         run: |
