--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,6 @@ on:
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
   PR_DESCRIPTION: ${{ github.event.head_commit.message }}
-  PR_URL: ${{ github.event.issue.pull_request.url }}
   PR_NUM: ${PR_URL##*/}
 
 jobs:
@@ -19,7 +18,7 @@ jobs:
       - name: Get Pull Request Number
         run: |
           echo "PR branch is: ${GITHUB_REF##*/}"
-          echo "Another option: $PR_URL and $PR_NUM"
+          echo "Another option: and $PR_NUM"
 
       - name: Verify file creation (without revealing content)
         run: |
