--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ on:
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
   PR_DESCRIPTION: ${{ github.event.head_commit.message }}
+  NUM: ${{ github.event.issue.number }}
 
 jobs:
   verify_file:
@@ -16,10 +17,8 @@ jobs:
 
       - name: Get Pull Request Number
         run: |
-          PR_URL="${{ github.event.issue.pull_request.url }}"
-          PR_NUM=${PR_URL##*/}
           echo "PR branch is: ${GITHUB_REF##*/}"
-          echo "Another option: and ${PR_URL##*/}"
+          echo "Another option $NUM"
 
       - name: Verify file creation (without revealing content)
         run: |
