--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-openshift-python-wrapper = "^4.15.14"
+openshift-python-wrapper = "^10.0.12"
 openshift-operator-utilities = "^1.0.0"
+jira = "^3.6.0"
+pylero = "^0.0.9"
 
 
 [build-system]
