--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,55 @@
 [tox]
-skipsdist = True
+envlist=code-check
+skipsdist=True
 
-[testenv]
-setenv = PYTHONPATH = {toxinidir}
-deps =
+[testenv:code-check]
+basepython = python3
+recreate=True
+setenv =
+    PYTHONPATH = {toxinidir}
+deps=
     pre-commit
 commands =
+    pip install pip --upgrade
+    pip install tox --upgrade
+    pre-commit clean
     pre-commit run --all-files
-allowlist_externals =
-    git
+
+# Polarion
+# Should run on every commit.
+[testenv:verify-tc-requirement-polarion]
+basepython = python3
+recreate=True
+setenv =
+    PYTHONPATH = {toxinidir}
+commands =
+    pip install pip --upgrade
+    pip install tox --upgrade
+    pip install git+https://github.com/RedHatQE/pylero.git
+    python3 ci_scripts/polarion/polarion_verify_tc_requirement.py
+
+# Should run only after merged.
+[testenv:mark-automated-polarion]
+basepython = python3
+recreate=True
+setenv =
+    PYTHONPATH = {toxinidir}
+commands =
+    pip install pip --upgrade
+    pip install tox --upgrade
+    pip install git+https://github.com/RedHatQE/pylero.git
+    python3 ci_scripts/polarion/polarion_set_automated.py
+
+[testenv:verify-bugs-are-open]
+basepython = python3
+recreate=True
+setenv =
+    PYTHONPATH = {toxinidir}
+deps:
+    GitPython
+    jira
+
+commands =
+    pip install pip --upgrade
+    pip install tox --upgrade
+    python3 ci_scripts/jira_scripts/check_jira_status.py
