--- a/.github/workflows/jira_script.yml
+++ b/.github/workflows/jira_script.yml
@@ -2,6 +2,9 @@ name: Checkout, Create Config Folder, Run Tox
 
 on:
   push:
+    branches:
+      - main
+      - 'cnv-**'
 
 jobs:
   verify-jira:
