--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,6 @@
 [tox]
-envlist=code-check
+envlist=None
 skipsdist=True
-
-[testenv:code-check]
-basepython = python3
-recreate=True
-setenv =
-    PYTHONPATH = {toxinidir}
-deps=
-    pre-commit
-commands =
-    pip install pip --upgrade
-    pip install tox --upgrade
-    pre-commit clean
-    pre-commit run --all-files
 
 # Polarion
 # Should run on every commit.
