remove skip_when_no_sriov fixture and mark sriov dependent tests explicitly

--- a/pytest.ini
+++ b/pytest.ini
@@ -22,7 +22,7 @@ markers =
     ipv6: IPV6 based test
     node_remediation: Node Remediation using NodeHalthCheck with SNR & FAR
     udn: user defined network tests
-
+    sriov: tests that requires sriov
     # CI
     smoke: Mark tests as smoke tests
     ci: Mark tests as CI tests
