--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ setenv =
 deps:
     python-utility-scripts
 commands =
-    pyutils-polarion-verify-tc-requirements --project-id "CNV" --branch "origin/main"
+    pyutils-polarion-verify-tc-requirements --project-id "CNV" --branch "origin/cnv-4.18"
 
 
 # Should run only after merged.
@@ -46,7 +46,7 @@ setenv =
 deps:
     python-utility-scripts
 commands =
-    pyutils-polarion-set-automated --project-id "CNV" --branch "origin/main"
+    pyutils-polarion-set-automated --project-id "CNV" --branch "origin/cnv-4.18"
 
 
 #Jira
