--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,7 @@ markers =
     node_remediation: Node Remediation using NodeHalthCheck with SNR & FAR
     udn: user defined network tests
     special_infra: tests that requires special infrastructure. e.g. sriov, gpu etc.
+    dpdk: Tests that requires dpdk
     # CI
     smoke: Mark tests as smoke tests
     ci: Mark tests as CI tests
