--- a/pytest.ini
+++ b/pytest.ini
@@ -27,7 +27,7 @@ markers =
     special_infra: tests that requires special infrastructure. e.g. sriov, gpu etc.
     dpdk: Tests that requires dpdk
     swap: tests that require SWAP active on nodes
-    high_resource: tests using VM requirening a lot of resources (like Windows OS VMs, hight performance VMs, etc)
+    high_resource_vm: tests using VM requirening a lot of resources (like Windows OS VMs, hight performance VMs, etc)
     gpu: tests that require cluster with gpu
     cpu_manager: tests that require cpu manager on nodes
     numa: tests that require numa configured on nodes
