update packages and tox

--- a/tox.ini
+++ b/tox.ini
@@ -44,9 +44,9 @@ recreate=True
 setenv =
     PYTHONPATH = {toxinidir}
 deps:
-    python-utility-scripts
+    python-utility-scripts >= 1.0.15
 commands =
-    pyutils-polarion-set-automated --project-id "CNV" --branch "upstream/cnv-4.18"
+    pyutils-polarion-set-automated --project-id "CNV"  {posargs}
 
 
 #Jira
