--- a/pytest.ini
+++ b/pytest.ini
@@ -31,6 +31,7 @@ markers =
     sriov: tests that require sriov net-cards on nodes
     hugepage: tests that require nodes with hugepages
     service_mesh: tests that require the service mesh operator to be installed
+    jumbo_frame: tests that require network configurations supporting jumbo frames
     # CI
     smoke: Mark tests as smoke tests
     ci: Mark tests as CI tests
