Update csv permissions
Signed-off-by: Harel Meir <hmeir@redhat.com>

--- a/tests/install_upgrade_operators/csv/csv_permissions_audit/csv-permissions.yaml
+++ b/tests/install_upgrade_operators/csv/csv_permissions_audit/csv-permissions.yaml
@@ -1719,6 +1719,16 @@ hyperconverged-cluster-operator:
   - apiGroups:
     - ''
     resources:
+    - secrets
+    verbs:
+    - get
+    - list
+    - watch
+    - create
+    - update
+  - apiGroups:
+    - ''
+    resources:
     - endpoints
     verbs:
     - get
