--- a/.github/workflows/component-builder.yml
+++ b/.github/workflows/component-builder.yml
@@ -44,8 +44,16 @@ jobs:
           ORGANIZATION_ID: ${{ secrets.BITWARDEN_ORGANIZATION_ID }}
           ACCESS_TOKEN: ${{ secrets.BITWARDEN_ACCESS_TOKEN }}
         run: ./build.sh
-      - name: Report artifacts
-        working-directory: ./containers/fedora
+      - name: Logging to quay.io
+        run: podman login -u ${{ secrets.QUAY_USER }} -p ${{ secrets.QUAY_TOKEN }} quay.io
+      - name: Tag & Push image to staging
+        env:
+          local_repository: "localhost/fedora"
+          remote_repository: "quay.io/openshift-cnv/qe-cnv-tests-fedora-staging"
+          arch_tag: "${{ env.FEDORA_VERSION }}-${{ env.CPU_ARCH }}"
+          remote_tag: "${{ env.FEDORA_VERSION }}-dev"
         run: |
-          ls -la
-          podman images
+          podman tag "${local_repository}":"${arch_tag}" "${remote_repository}":"${arch_tag}"
+          podman push "${remote_repository}":"${arch_tag}"
+          podman manifest create --log-level=debug "${remote_repository}":"${remote_tag}" "${remote_repository}":"${arch_tag}"
+          podman manifest push "${remote_repository}":"${remote_tag}" --all --format=v2s2
