--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ dependencies = [
   "urllib3>=2.2.3",
   "xmltodict>=0.14.2",
   "openshift-python-wrapper~=11.0.10",
+  "openshift-python-scale-utilities==0.1.1.3",
 ]
 
 [tool.hatch.build.targets.wheel]
