--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ dependencies = [
   "pytest>=8.3.3",
   "pytest-benchmark>=5.1.0",
   "pytest-dependency>=0.6.0",
-  "pytest-jira>=0.3.21",
+  "pytest-jira~=0.3.21",
   "pytest-order>=1.3.0",
   "pytest-progress>=1.3.0",
   "pytest-testconfig>=0.2.0",
