--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ dependencies = [
   "urllib3>=2.2.3",
   "xmltodict>=0.14.2",
   "openshift-python-wrapper~=4.18.0",
+  "marshmallow~=3.26.1",
 ]
 
 [tool.hatch.build.targets.wheel]
