[virt] drop rwo storage related skips
  - drop storage related programmatic skips
  - added new "migration" marker
  - added new virt sanity verification step for default storage

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,7 +14,6 @@ markers =
     # Data collection markers
     skip_must_gather_collection: skip must gather collection on failures
     gpu: indicates collecting relevant namespace data on failure
-    swap: indicates collecting relevant namespace data on failure
     # Test types
     destructive: Destructive tests
     sap_hana: SAP HANA tests
@@ -38,6 +37,7 @@ markers =
     jumbo_frame: tests that require network configurations supporting jumbo frames
     single_nic: tests that dont require mutli-nic nodes, required for conformance tests for new archs, platforms etc.
     arm64: tests that require ARM-based cluster supported
+    migration: tests that involve migration (e.g. live migrating VM, hotplugging CPU, etc)
     # CI
     smoke: Mark tests as smoke tests
     ci: Mark tests as CI tests
