gh action, component-builder: Upload the generated image as an artifact
PR authors can now access the created container image and use to for its
verification.

After downloading the tarball, load it locally:
`podman load -i download/fedora-image.tar`

Signed-off-by: Edward Haas <edwardh@redhat.com>

--- a/.github/workflows/component-builder.yml
+++ b/.github/workflows/component-builder.yml
@@ -43,3 +43,20 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}
           NO_SECRETS: "true"
         run: ./build.sh
+      - name: Save container image as tarball
+        env:
+          local_repository: "localhost/fedora"
+          remote_repository: "quay.io/openshift-cnv/qe-cnv-tests-fedora-staging"
+          arch_tag: "${{ env.FEDORA_VERSION }}-${{ env.CPU_ARCH }}"
+        run: |
+          mkdir -p artifacts
+          podman tag "${local_repository}":"${arch_tag}" "${remote_repository}":"${arch_tag}"
+          podman save -o artifacts/fedora-image.tar "${remote_repository}":"${arch_tag}"
+          echo "Saved image to artifacts/fedora-image.tar"
+      - name: Upload container image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: fedora-container-image
+          path: artifacts/fedora-image.tar
+          retention-days: 5
+          compression-level: 0
