--- a/pytest.ini
+++ b/pytest.ini
@@ -11,33 +11,44 @@ markers =
     order: Configure test order
     early: Run fixtures early
     redhat_internal_dependency: Tests which have a dependency on an RedHat internal resource
+
     # Data collection markers
     skip_must_gather_collection: skip must gather collection on failures
-    gpu: indicates collecting relevant namespace data on failure
+
     # Test types
     destructive: Destructive tests
     sap_hana: SAP HANA tests
     ovs_brcnv: Test functionality of existing ovs bridge with primary, secondary node ifaces
     scale: Scale tests
     longevity: Longevity (continuous) tests
-    ipv4: IPV4 based test
-    ipv6: IPV6 based test
     node_remediation: Destructive Node Remediation using NodeHealthCheck with SNR
     node_remediation_ipmi_enabled: Destructive NodeHealthCheck with SNR/FAR on IPMI-enabled clusters
+
+    # Cluster markers
+    ## Architecture
+    arm64: tests that can run on ARM-based cluster
+
+    ## Hardware
     special_infra: tests that requires special infrastructure. e.g. sriov, gpu etc.
+    gpu: tests that require cluster with gpu
+    sriov: tests that require sriov net-cards on nodes
+    single_nic: tests that dont require mutli-nic nodes, required for conformance tests for new archs, platforms etc.
+
+    ## Configuration
+    ipv4: IPv4 based test
+    ipv6: IPv6 based test
     dpdk: Tests that requires dpdk
     swap: tests that require SWAP active on nodes
-    high_resource_vm: tests using VM requirening a lot of resources (like Windows OS VMs, hight performance VMs, etc)
-    gpu: tests that require cluster with gpu
     cpu_manager: tests that require cpu manager on nodes
     numa: tests that require numa configured on nodes
-    sriov: tests that require sriov net-cards on nodes
     hugepages: tests that require nodes with hugepages
     service_mesh: tests that require the service mesh operator to be installed
     jumbo_frame: tests that require network configurations supporting jumbo frames
-    single_nic: tests that dont require mutli-nic nodes, required for conformance tests for new archs, platforms etc.
-    arm64: tests that require ARM-based cluster supported
-    migration: tests that involve migration (e.g. live migrating VM, hotplugging CPU, etc)
+    rwx_default_storage: tests that require RWX storage
+
+    ## Resources
+    high_resource_vm: tests using VM requirening a lot of resources (like Windows OS VMs, hight performance VMs, etc)
+
     # CI
     smoke: Mark tests as smoke tests
     ci: Mark tests as CI tests
@@ -46,6 +57,7 @@ markers =
     ocp_interop: Interop testing with openshift
     ibm_bare_metal: IBM BM tests
     gating: Mark tier2 tests that are part of gating job
+
     # Install and upgrade
     install: Tests that self-manage HCO/CNV installation
     upgrade: Run regular upgrade lanes with default configuration
@@ -55,6 +67,7 @@ markers =
     cnv_upgrade: Mark cnv upgrade test
     ocp_upgrade: Mark ocp upgrade test
     eus_upgrade: Mark EUS-to-EUS upgrade test
+
     # Teams
     chaos: Chaos tests
     virt: Virt tests
@@ -65,6 +78,7 @@ markers =
     sno: SingleNodeOpenShift tests
     infrastructure: Infrastructure tests
     data_protection: Data Protection tests
+
     # cluster_health_check
     cluster_health_check: cluster health check tests
 
