fix sanity marker name

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,29 +25,29 @@ markers =
     node_remediation_ipmi_enabled: Destructive NodeHealthCheck with SNR/FAR on IPMI-enabled clusters
 
     # Cluster markers
-    ## Architecture
-    arm64: tests that can run on ARM-based cluster
+    ## Architecture support
+    arm64: Tests that can run on ARM-based cluster
 
-    ## Hardware
-    special_infra: tests that requires special infrastructure. e.g. sriov, gpu etc.
-    gpu: tests that require cluster with gpu
-    sriov: tests that require sriov net-cards on nodes
-    single_nic: tests that dont require mutli-nic nodes, required for conformance tests for new archs, platforms etc.
+    ## Hardware requirements
+    special_infra: Tests that requires special infrastructure. e.g. sriov, gpu etc.
+    gpu: Tests that require cluster with gpu cards
+    sriov: Tests that require sriov net-cards on nodes
+    single_nic: Tests that don`t require mutli-nic nodes, required for conformance tests for new archs, platforms etc.
 
-    ## Configuration
-    ipv4: IPv4 based test
-    ipv6: IPv6 based test
-    dpdk: Tests that requires dpdk
-    swap: tests that require SWAP active on nodes
-    cpu_manager: tests that require cpu manager on nodes
-    numa: tests that require numa configured on nodes
-    hugepages: tests that require nodes with hugepages
-    service_mesh: tests that require the service mesh operator to be installed
-    jumbo_frame: tests that require network configurations supporting jumbo frames
-    rwx_default_storage: tests that require RWX storage
+    ## Configuration requirements
+    ipv4: Tests that require IPv4
+    ipv6: Tests that require IPv6
+    dpdk: Tests that require dpdk
+    swap: Tests that require SWAP active on nodes
+    cpu_manager: Tests that require cpu manager on nodes
+    numa: Tests that require numa configured on nodes
+    hugepages: Tests that require nodes with hugepages
+    service_mesh: Tests that require the service mesh operator to be installed
+    jumbo_frame: Tests that require network configurations supporting jumbo frames
+    rwx_default_storage: Tests that require RWX storage
 
-    ## Resources
-    high_resource_vm: tests using VM requirening a lot of resources (like Windows OS VMs, hight performance VMs, etc)
+    ## Resources requirements
+    high_resource_vm: Tests that create VM using a lot of resources (like Windows OS VMs, hight performance VMs, etc)
 
     # CI
     smoke: Mark tests as smoke tests
