[4.18] Add jira z stream fix version
Signed-off-by: Harel Meir <hmeir@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ deps:
 commands =
     pip install pip --upgrade
     pip install tox --upgrade
-    pyutils-jira --config-file-path jira.cfg --target-versions "4.18.2,4.18.3,4.18.4,4.18.5" --verbose
+    pyutils-jira --config-file-path jira.cfg --target-versions "4.18.2,4.18.3,4.18.4,4.18.5,4.18.z" --verbose
 
 #Unused code
 [testenv:unused-code]
