Cross Cluster Live Migration: add remote client

--- a/pytest.ini
+++ b/pytest.ini
@@ -80,6 +80,7 @@ markers =
     sno: SingleNodeOpenShift tests
     infrastructure: Infrastructure tests
     data_protection: Data Protection tests
+    cross_cluster_live_migration: Cross Cluster Live Migration tests
 
     # cluster_health_check
     cluster_health_check: cluster health check tests
