Update tox for 4.19
- Removed 4.20.0 and vfuture from Jira target versions
- Remove 4.19.0 from target versions
- Update Polarion to use upstream/cnv-4.19 branch

Signed-off-by: Geetika Kapoor <gkapoor@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ setenv =
 deps:
     python-utility-scripts
 commands =
-    pyutils-polarion-verify-tc-requirements --project-id "CNV" --branch "origin/main"
+    pyutils-polarion-verify-tc-requirements --project-id "CNV" --branch "upstream/cnv-4.19"
 
 
 # Should run only after merged.
@@ -61,7 +61,7 @@ deps:
 commands =
     pip install pip --upgrade
     pip install tox --upgrade
-    pyutils-jira --config-file-path jira.cfg --target-versions "vfuture,4.19.0,4.19.1,4.19.z,4.20.0" --verbose
+    pyutils-jira --config-file-path jira.cfg --target-versions "4.19.1,4.19.z" --verbose
 
 #Unused code
 [testenv:unused-code]
