--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ deps:
 commands =
     pip install pip --upgrade
     pip install tox --upgrade
-    pyutils-jira --config-file-path jira.cfg --target-versions "4.19.1,4.19.z" --verbose
+    pyutils-jira --config-file-path jira.cfg --target-versions "4.19.1,4.19.2, 4.19.3, 4.19.4, 4.19.z" --verbose
 
 #Unused code
 [testenv:unused-code]
