Upgrade Scale Testing
Initial Upgrade Scale Testing
- create vms w/ load

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,7 @@ markers =
     longevity: Longevity (continuous) tests
     node_remediation: Destructive Node Remediation using NodeHealthCheck with SNR
     node_remediation_ipmi_enabled: Destructive NodeHealthCheck with SNR/FAR on IPMI-enabled clusters
+    threaded: Code requires thread-safe processing
 
     # Cluster markers
     ## Architecture support
