[IUO] update 4.18 csv permissions
Signed-off-by: Harel Meir <hmeir@redhat.com>

--- a/tests/install_upgrade_operators/csv/csv_permissions_audit/csv-permissions.yaml
+++ b/tests/install_upgrade_operators/csv/csv_permissions_audit/csv-permissions.yaml
@@ -1726,6 +1726,7 @@ hyperconverged-cluster-operator:
     - watch
     - create
     - update
+    - delete
   - apiGroups:
     - ''
     resources:
