--- a/pytest.ini
+++ b/pytest.ini
@@ -24,6 +24,7 @@ markers =
     longevity: Longevity (continuous) tests
     node_remediation: Destructive Node Remediation using NodeHealthCheck with SNR
     node_remediation_ipmi_enabled: Destructive NodeHealthCheck with SNR/FAR on IPMI-enabled clusters
+    cclm: Cross-cluster live migration tests
 
     # Cluster markers
     ## Architecture support
