--- a/.github/workflows/component-builder-publish.yml
+++ b/.github/workflows/component-builder-publish.yml
@@ -1,61 +1,98 @@
-name: "Component Builder Publish"
+name: "Component builder push to production"
 on:
-  push:
+  pull_request_target:
+    types:
+      - 'closed'
     paths:
       - 'containers/fedora/**'
     branches:
       - 'main'
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 jobs:
-  guest-fedora-amd64:
+  push-images-to-production:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     env:
-      FEDORA_IMAGE: Fedora-Cloud-Base-Generic-41-1.4.x86_64.qcow2
-      FEDORA_VERSION: 41
-      CPU_ARCH: amd64
+      FEDORA_VARS_FILE: "containers/fedora/fedora-vars"
+      PR_NUMBER: ${{ github.event.number }}
       FULL_EMULATION: "true"
       DEBIAN_FRONTEND: noninteractive
     steps:
-      - name: Check out code
+      - name: Check out code 
         uses: actions/checkout@v4
-      - name: Install dependencies for VM build
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            qemu-system-x86 \
-            libvirt-daemon-system \
-            virtinst cloud-image-utils \
-            libguestfs-tools
-      - name: Tweak hosted runner to enable 'virt-sysprep'
-        # https://bugs.launchpad.net/ubuntu/+source/linux/+bug/759725
-        run: sudo chmod 0644 /boot/vmlinuz*
-      - name: Fetch base Fedora image
-        working-directory: ./containers/fedora
-        run: wget -q "https://download.fedoraproject.org/pub/fedora/linux/releases/41/Cloud/x86_64/images/${{ env.FEDORA_IMAGE }}"
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+          sudo apt-get install -y podman
+      - name: Login in to quay.io
+        uses: redhat-actions/podman-login@v1
         with:
-          version: "0.8.22"
-      - name: Create VM
-        working-directory: ./containers/fedora
-        env:
-          PYTHONPATH: ${{ github.workspace }}
-          ORGANIZATION_ID: ${{ secrets.BITWARDEN_ORGANIZATION_ID }}
-          ACCESS_TOKEN: ${{ secrets.BITWARDEN_ACCESS_TOKEN }}
-        run: ./build.sh
-      - name: Logging to quay.io
-        run: podman login -u ${{ secrets.QUAY_USER }} -p ${{ secrets.QUAY_TOKEN }} quay.io
-      - name: Tag & Push image to staging
-        env:
-          local_repository: "localhost/fedora"
-          remote_repository: "quay.io/openshift-cnv/qe-cnv-tests-fedora-staging"
-          arch_tag: "${{ env.FEDORA_VERSION }}-${{ env.CPU_ARCH }}"
-          remote_tag: "${{ env.FEDORA_VERSION }}-dev"
+          username: ${{ secrets.QUAY_USER }}
+          password: ${{ secrets.QUAY_TOKEN }}
+          registry: quay.io
+      - name: Create multi-arch image manifest and push the images to production 
         run: |
-          podman tag "${local_repository}":"${arch_tag}" "${remote_repository}":"${arch_tag}"
-          podman push "${remote_repository}":"${arch_tag}"
-          podman manifest create --log-level=debug "${remote_repository}":"${remote_tag}" "${remote_repository}":"${arch_tag}"
-          podman manifest push "${remote_repository}":"${remote_tag}" --all --format=v2s2
+          # Function to retag container images
+          # 5 args for this function are in order:
+          # source_repo, source_tag, dest_repo, dest_tag 
+          # and pr_tag (if available)
+          retag_images() {
+            SOURCE_REPO=$1
+            SOURCE_TAG=$2
+            DEST_REPO=$3
+            DEST_TAG=$4
+            # SOURCE_PR_TAG is applicable as staging repo has 'pr-tag'
+            # associated with the image
+            SOURCE_PR_TAG=""
+            if [ $# -eq 5 ]; then
+              SOURCE_PR_TAG="-$5"
+            fi
+            X86_64_SOURCE_IMG="${SOURCE_REPO}:${SOURCE_TAG}-x86_64${SOURCE_PR_TAG}"
+            AARCH64_SOURCE_IMG="${SOURCE_REPO}:${SOURCE_TAG}-aarch64${SOURCE_PR_TAG}"
+            S390_SOURCE_IMG="${SOURCE_REPO}:${SOURCE_TAG}-s390x${SOURCE_PR_TAG}"
+            X86_64_DEST_IMG="${DEST_REPO}:${DEST_TAG}-x86_64"
+            AARCH64_DEST_IMG="${DEST_REPO}:${DEST_TAG}-aarch64"
+            S390_DEST_IMG="${DEST_REPO}:${DEST_TAG}-s390x"
+            DEST_IMG_MANIFEST="${DEST_REPO}:${DEST_TAG}"
+
+            # Pull the images
+            if ! podman pull "${X86_64_SOURCE_IMG}" 2>/dev/null; then
+                echo "Failed to pull x86_64 staging image: ${X86_64_SOURCE_IMG}" >&2
+                exit 1
+            fi
+            if ! podman pull "${AARCH64_SOURCE_IMG}" 2>/dev/null; then
+                echo "Failed to pull aarch64 staging image: ${AARCH64_SOURCE_IMG}" >&2
+                exit 1
+            fi
+            if ! podman pull "${S390_SOURCE_IMG}" 2>/dev/null; then
+                echo "Failed to pull s390x staging image: ${S390_SOURCE_IMG}" >&2
+                exit 1
+            fi
+
+            # Tag the images
+            podman tag "${X86_64_SOURCE_IMG}" "${X86_64_DEST_IMG}"
+            podman tag "${AARCH64_SOURCE_IMG}" "${AARCH64_DEST_IMG}"
+            podman tag "${S390_SOURCE_IMG}" "${S390_DEST_IMG}"
+
+            # Push the images
+            podman push "${X86_64_DEST_IMG}"
+            podman push "${AARCH64_DEST_IMG}"
+            podman push "${S390_DEST_IMG}"
+            
+            # Create multi-arch image manifest
+            podman manifest create "${DEST_IMG_MANIFEST}"
+            podman manifest add "${DEST_IMG_MANIFEST}" "${X86_64_DEST_IMG}"
+            podman manifest add "${DEST_IMG_MANIFEST}" "${AARCH64_DEST_IMG}"
+            podman manifest add "${DEST_IMG_MANIFEST}" "${S390_DEST_IMG}"
+            podman manifest push "${DEST_IMG_MANIFEST}"
+          }
+
+          FEDORA_VERSION=$(sed -n "s/^FEDORA_VERSION[[:space:]]*=[[:space:]]*\(.*\)/\1/p" "${{ env.FEDORA_VARS_FILE }}")
+          PROD_REPO=quay.io/openshift-cnv/qe-cnv-tests-fedora
+          STAGE_REPO=quay.io/openshift-cnv/qe-cnv-tests-fedora-staging
+          podman manifest inspect "${PROD_REPO}":"${FEDORA_VERSION}" 1>prodimg 2>/dev/null || true
+          if [ "$(grep -c digest prodimg)" -ne 0 ]; then
+            # Backup the existing images and multi-arch image manifest as it is available
+            retag_images "${PROD_REPO}" "${FEDORA_VERSION}" "${PROD_REPO}" "${FEDORA_VERSION}-pr-${{ env.PR_NUMBER }}"
+          fi
+          # Retag stage images to production
+          retag_images "${STAGE_REPO}" "${FEDORA_VERSION}" "${PROD_REPO}" "${FEDORA_VERSION}" "pr-${{ env.PR_NUMBER }}"
